🚧 init zig structure with `verkle-crypto` repo code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-zig-cache
-zig-out
+# OS-specific files
 **.DS_Store
+
+# Zig-specific build artifacts
+zig-cache/
+zig-out/
+/release/
+/debug/
+/build/
+/build-*/
+/docgen_tmp/
