💚 reenable test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Docs
+name: Test
 
 on:
   push:
@@ -17,5 +17,31 @@ jobs:
         with:
           zig-version: master
 
-      - name: Generate docs
-        run: zig test -femit-docs=./docs src/lib.zig
+      - name: Build
+        run: zig build
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Zig
+        uses: korandoru/setup-zig@v1
+        with:
+          zig-version: master
+
+      - name: Lint
+        run: zig fmt --check src/*.zig
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Zig
+        uses: korandoru/setup-zig@v1
+        with:
+          zig-version: master
+
+      - name: Test
+        run: zig build test --summary all
