🧱 upload release artifact

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,4 +44,6 @@ jobs:
           zig-version: master
 
       - name: Test
-        run: zig build test --summary all
+        run: |
+          zig version
+          zig build test --summary all
