--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -19,6 +19,21 @@ jobs:
 
       - name: Build ReleaseFast
         run: |
+          zig version
           zig build -Doptimize=ReleaseFast
           echo "Binary size:"
           du -h ./zig-out/bin/cairo-zig
+
+      - name: Generate artifact name
+        id: artifact-name
+        run: |
+          export COMMIT_HASH=$(git rev-parse --short HEAD)
+          export CURRENT_DATE=$(date +"%Y%m%d")
+          export ARTIFACT_NAME="cairo-zig_${CURRENT_DATE}_${COMMIT_HASH}_$(uname -m)"
+          echo "::set-output name=artifact_name::$ARTIFACT_NAME"
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.artifact-name.outputs.artifact_name }}
+          path: ./zig-out
