--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,6 +36,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "tcoratger",
+      "name": "Thomas Coratger",
+      "avatar_url": "https://avatars.githubusercontent.com/u/60488569?v=4",
+      "profile": "https://github.com/tcoratger",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
