cleanup: rename all builds, commands, links to ziggy starkdust

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "cairo-zig",
+  "projectName": "ziggy-starkdust",
   "projectOwner": "keep-starknet-strange",
   "repoType": "github",
   "repoHost": "https://github.com",
