Add C wrapper of starknet_crypto for pedersen primitive  (#244)
* Use C wrapper of starknet_crypto to implement pedersen primitive in zig

* add filtering to tests

* Add makefile for build of the starknet_crypto library

* Minor changes + README

* Introduce constants for Felts number of bytes and starknet prime

---------

Co-authored-by: lanaivina <31368580+lana-shanghai@users.noreply.github.com>

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,10 +17,15 @@ jobs:
         with:
           zig-version: master
 
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+
       - name: Build ReleaseFast
         run: |
           zig version
-          zig build -Doptimize=ReleaseFast
+          make build-optimize
           echo "Binary size:"
           du -h ./zig-out/bin/ziggy-starkdust
 
