:busts_in_silhouette: Add @dhruvkelawala as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -81,6 +81,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "dhruvkelawala",
+      "name": "Dhruv Kelawala",
+      "avatar_url": "https://avatars.githubusercontent.com/u/50968441?v=4",
+      "profile": "https://github.com/dhruvkelawala",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
