--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -90,6 +90,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Godspower-Eze",
+      "name": "Godspower Eze",
+      "avatar_url": "https://avatars.githubusercontent.com/u/61994334?v=4",
+      "profile": "https://github.com/Godspower-Eze",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
