--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -117,6 +117,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "ndcroos",
+      "name": "ndcroos",
+      "avatar_url": "https://avatars.githubusercontent.com/u/16431833?v=4",
+      "profile": "https://ndcroos.github.io/site/",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
