--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -135,6 +135,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "pjserol",
+      "name": "Pierre-Jean",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3019795?v=4",
+      "profile": "https://github.com/pjserol",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
