:busts_in_silhouette: Add @tudorpintea999 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -144,6 +144,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "tudorpintea999",
+      "name": "iwantanode",
+      "avatar_url": "https://avatars.githubusercontent.com/u/87604944?v=4",
+      "profile": "https://github.com/tudorpintea999",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
