--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -81,6 +81,78 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "dhruvkelawala",
+      "name": "Dhruv Kelawala",
+      "avatar_url": "https://avatars.githubusercontent.com/u/50968441?v=4",
+      "profile": "https://github.com/dhruvkelawala",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Godspower-Eze",
+      "name": "Godspower Eze",
+      "avatar_url": "https://avatars.githubusercontent.com/u/61994334?v=4",
+      "profile": "https://github.com/Godspower-Eze",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "edisontim",
+      "name": "tedison",
+      "avatar_url": "https://avatars.githubusercontent.com/u/76473430?v=4",
+      "profile": "https://github.com/edisontim",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "ptisserand",
+      "name": "ptisserand",
+      "avatar_url": "https://avatars.githubusercontent.com/u/544314?v=4",
+      "profile": "https://github.com/ptisserand",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "ndcroos",
+      "name": "ndcroos",
+      "avatar_url": "https://avatars.githubusercontent.com/u/16431833?v=4",
+      "profile": "https://ndcroos.github.io/site/",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "0xicosahedron",
+      "name": "Icosahedron",
+      "avatar_url": "https://avatars.githubusercontent.com/u/83328087?v=4",
+      "profile": "https://github.com/0xicosahedron",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "pjserol",
+      "name": "Pierre-Jean",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3019795?v=4",
+      "profile": "https://github.com/pjserol",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "tudorpintea999",
+      "name": "iwantanode",
+      "avatar_url": "https://avatars.githubusercontent.com/u/87604944?v=4",
+      "profile": "https://github.com/tudorpintea999",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
