--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,17 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Install cargo-binstall
+        uses: cargo-bins/cargo-binstall@main
+    
+      - name: Install Hyperfine
+        run: cargo binstall -y hyperfine
+    
       - name: Build
         run: make build
+
+      - name: Run benchmarks
+        run: make build-compare-benchmarks
 
   lint:
     runs-on: ubuntu-latest
@@ -73,9 +82,3 @@ jobs:
           zig version
           make build-integration-test
           ./zig-out/bin/integration_test
-
-      - name: Run benchmarks
-        run: |
-          zig version
-          make build-compare-benchmarks
-          ./zig-out/bin/compare_benchmarks
