--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Setup cairo-compile
+        run: make deps
+
       - name: Build
         run: make build
 
