--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+
+        # NOTE: we do it in one step because GitHub cleans the PATH between steps
+      - name: Install dependencies and compile project
+        run: |
+          source scripts/install/install-ubuntu.sh
+          make check
+
       - name: Setup cairo-compile
         run: make deps
 
