--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ zig-out/
 docsite/
 cairo-vm-env
 cairo-vm
+tmp/
+
 # we dont need compiled cairo programs in repo
 /cairo_programs/*.json
 /cairo_programs/benchmarks/*.json
