--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,6 +95,9 @@ jobs:
           source scripts/install/install-ubuntu.sh
           make check
 
+      - name: Compile cairo programs
+        run: |
+          make compile-cairo-programs
 
       - name: Integration test
         run: |
