fix max_path_bytes deprecated, make dep on commit link

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           zig-version: master
 
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+      # - name: Setup Rust
+      #   uses: actions-rs/toolchain@v1
+      #   with:
+      #     toolchain: stable
 
       - name: Build ReleaseFast
         run: |
