--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,10 +43,10 @@ jobs:
         with:
           zig-version: master
 
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+      # - name: Setup Rust
+      #   uses: actions-rs/toolchain@v1
+      #   with:
+      #     toolchain: stable
 
       - name: Test
         run: |
@@ -58,10 +58,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Zig
-        uses: korandoru/setup-zig@v1
-        with:
-          zig-version: master
+      # - name: Set up Zig
+      #   uses: korandoru/setup-zig@v1
+      #   with:
+      #     zig-version: master
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
